<resources>
    <string name="app_name">MyBP\nBudget Planner</string>
    <string name="facebook_app_id">744313335720418</string>

    <!-- Strings related to ImageView descriptions and other MyBP descriptions -->
    <string name="app_icon_desc">MyBP icon</string>
    <string name="app_about_mybp">
        A Personal Finance and Budget Planner app. All information you provide or store using this app remains personal and is not stored on remote servers.
    </string>

    <!-- -->
    <string name="username">Username</string>
    <string name="email">Email</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to the Drawer Navigation -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_plan">Create Plan</string>
    <string name="nav_plans">Budget Plans</string>
    <string name="nav_income">Income</string>
    <string name="nav_expenses">Expenses</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_invite">Invite Friends</string>
    <string name="nav_rate">Rate Us</string>
    <string name="nav_help_feedback">Help &amp; Feedback</string>
    <string name="nav_about">About</string>

    <!-- Strings related to actions on the toolbar -->
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_print">Print</string>
    <string name="action_clear_help_history">Clear help history</string>
    <string name="action_send">Send</string>

    <!-- General -->
    <string name="choose_calendar">Choose from calendar</string>

    <!-- Plan Fragment -->
    <string name="plan_title">Title</string>
    <string name="plan_title_hint">Enter plan title</string>
    <string name="plan_type">Type</string>
    <string name="plan_from">From</string>
    <string name="plan_to">To</string>
    <string name="plan_income">Income Planning</string>
    <string name="plan_income_salary_wage">Salary/Wage</string>
    <string name="plan_income_dividends">Dividends</string>
    <string name="plan_income_interests">Interests</string>
    <string name="plan_income_profit">Profit</string>
    <string name="plan_income_rents">Rents</string>
    <string name="plan_expenses">Expenses Planning</string>
    <string name="plan_expenses_food">Food</string>
    <string name="plan_expenses_health">Health</string>
    <string name="plan_expenses_Clothes">Clothes</string>
    <string name="plan_expenses_transport">Transport/Fuel</string>
    <string name="plan_expenses_household">Household</string>
    <string name="plan_expenses_gadgets">Gadgets</string>
    <string name="plan_expenses_activities">Activities</string>
    <string name="plan_expenses_relaxation">Relaxation</string>

    <!-- Income/Expenses Fragment -->
    <string name="income_expenses_today">Today</string>
    <string name="income_expenses_all">All</string>
    <string name="income_expenses_create">Create</string>
    <string name="income_expenses_add">Add</string>
    <string name="income_expenses_plan_hint">0.0</string>
    <string name="income_expenses_hint">Fill only fields you would like to plan for</string>
    <string name="income_expenses_index">00</string>
    <string name="income_expenses_description">Description</string>
    <string name="income_expenses_expired">Expired</string>

    <!-- About Activity -->
    <string name="facebook_like">Like us on facebook</string>
    <string name="email_us">Email Us\nmybp@gmail.com</string>

    <!-- Settings Activity -->
    <string name="settings_profile">Profile Settings</string>
    <string name="settings_notification">Notification Settings</string>
    <string name="settings_currency">Currency Settings</string>
    <string name="profile">Profile</string>
    <string name="profile_sub">Provide information about your personal account</string>
    <string name="profile_google">Use Google account</string>
    <string name="profile_google_sub">Allow MyBP to use your Google account to setup a basic profile</string>
    <string name="notification">Notifications</string>
    <string name="notification_sub">Set notification preferences</string>
    <string name="notification_sub_2">Allow MyBP to remind you about updating your daily transactions</string>
    <string name="notification_individual">Individual notification</string>
    <string name="notification_individual_sub">Set individual notifications for each budget plan</string>
    <string name="notification_sound">Notification sound</string>
    <string name="notification_light">Notification light</string>
    <string name="notification_vibration">Notification vibrations</string>
    <string name="notification_period">Set notification period</string>
    <string name="notification_period_sub">When would you like to receive notifications?</string>
    <string name="currency">Currency</string>
    <string name="currency_sub">Set default currency for all your transactions</string>

    <!-- Help & Feedback Activity -->
    <string name="feedback_send">Send feedback</string>
    <string name="feedback_from">From: email</string>
    <string name="feedback_feedback">Write your feedback</string>
    <string name="feedback_screenshots_logs">Include screenshots &amp; logs</string>
    <string name="help_popular">Popular</string>
    <string name="help_browse_all">Browse all articles</string>

    <!-- Strings related to Activity titles -->
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notification">Notification Settings</string>
    <string name="title_activity_help_feedback">Help &amp; Feedback</string>
    <string name="title_activity_feedback">Feedback</string>

    <string name="fab_facebook">Like us on Facebook</string>
    <string name="fab_twitter">Follow us on Twitter</string>
    <string name="fab_email">Contact us</string>
</resources>
