<?xml version="1.0" encoding="utf-8"?>    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"        xmlns:tools="http://schemas.android.com/tools"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:paddingBottom="10dp"        android:paddingEnd="10dp"        android:paddingLeft="10dp"        android:paddingRight="10dp"        android:paddingStart="10dp"        android:paddingTop="40dp"        android:fitsSystemWindows="true">        <LinearLayout            android:id="@+id/linearLayoutPlan"            android:orientation="vertical"            android:layout_width="match_parent"            android:layout_height="match_parent">            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_title"                    android:layout_width="100dp"                    android:layout_height="wrap_content"                    android:id="@+id/textViewTitle" />                <EditText                    android:layout_width="0dp"                    android:layout_height="wrap_content"                    android:layout_weight="1"                    android:inputType="textPersonName"                    android:id="@+id/editTextTitle"                    android:hint="@string/plan_title_hint" />            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_type"                    android:layout_width="100dp"                    android:layout_height="wrap_content"                    android:id="@+id/textViewType"/>                <Spinner                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/spinnerType"                    android:layout_weight="1"                    android:padding="12dp"                    android:layout_margin="2dp"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_from"                    android:layout_width="100dp"                    android:layout_height="wrap_content"                    android:id="@+id/textViewFrom" />                <Button                    android:text="@string/choose_calendar"                    android:layout_width="0dp"                    android:layout_height="wrap_content"                    android:id="@+id/buttonFrom"                    android:layout_weight="1"                    style="@style/ButtonSuccess" />            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_to"                    android:layout_width="100dp"                    android:layout_height="wrap_content"                    android:id="@+id/textViewTo" />                <Button                    android:text="@string/choose_calendar"                    android:layout_width="0dp"                    android:layout_height="wrap_content"                    android:id="@+id/buttonTo"                    android:layout_weight="1"                    style="@style/ButtonDanger" />            </LinearLayout>            <View style="@style/HorizontalDivider"                android:layout_marginTop="20dp"/>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/income_expenses_hint"                    android:layout_width="0dp"                    android:layout_height="wrap_content"                    android:id="@+id/textViewHint"                    android:layout_weight="1"                    android:textColor="@color/gray" />            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_income"                    android:layout_width="0dp"                    android:layout_height="wrap_content"                    android:id="@+id/textViewIncomePlanning"                    android:layout_weight="1"                    style="@style/TextViewHeading" />            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_income_salary_wage"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewSalary"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextSalary"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_income_dividends"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewDividends"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextDividends"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_income_interests"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewInterests"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextInterests"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_income_profit"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewProfit"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextProfit"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_income_rents"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewRents"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextRents"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses"                    android:layout_width="0dp"                    android:layout_height="wrap_content"                    android:id="@+id/textViewExpensesPlanning"                    android:layout_weight="1"                    style="@style/TextViewHeading" />            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses_food"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewFood"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextFood"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses_health"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewHealth"                    android:layout_weight="1" />                <EditText                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:layout_weight="1"                    android:id="@+id/editTextHealth"                    android:inputType="number|numberDecimal"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses_Clothes"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewClothes"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextClothes"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses_transport"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewTransport"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextTransport"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses_household"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewHousehold"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextHousehold"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses_gadgets"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewGadgets"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextGadgets"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses_activities"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewActivities"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextActivities"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:text="@string/plan_expenses_relaxation"                    android:layout_width="0dp"                    android:layout_height="match_parent"                    android:id="@+id/textViewRelaxation"                    android:layout_weight="1" />                <EditText                    android:layout_height="match_parent"                    android:id="@+id/editTextRelaxation"                    android:inputType="number|numberDecimal"                    android:layout_width="0dp"                    android:layout_weight="1"                    android:hint="@string/income_expenses_plan_hint"/>            </LinearLayout>            <View style="@style/HorizontalDivider"                android:layout_marginTop="20dp"/>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent" >                <Button                    android:id="@+id/buttonCreate"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/income_expenses_create" />            </LinearLayout>        </LinearLayout>    </android.support.v4.widget.NestedScrollView>