<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayoutNotifications">
            <Switch
                android:text="@string/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchNotifications"
                style="@style/SwitchStyle"
                android:checked="false"
                android:onClick="onClickReceiveNotifications" />

            <View
                android:id="@id/divider"
                style="@style/HorizontalDivider" />

            <Switch
                android:text="@string/notification_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchNotificationSound"
                android:checked="false"
                style="@style/SwitchStyle"
                android:onClick="onClickSoundNotification" />

            <View
                android:id="@id/divider"
                style="@style/HorizontalDivider" />

            <Switch
                android:text="@string/notification_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchNotificationLight"
                style="@style/SwitchStyle"
                android:checked="false"
                android:onClick="onClickLightNotification" />

            <View
                android:id="@id/divider"
                style="@style/HorizontalDivider" />

            <Switch
                android:text="@string/notification_vibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchNotificationVibrations"
                android:checked="false"
                style="@style/SwitchStyle"
                android:onClick="onClickVibrationsNotification" />

            <View
                android:id="@id/divider"
                style="@style/HorizontalDivider" />

            <TextView
                android:text="@string/notification_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNotificationPeriods"
                style="@style/TextViewModerate"
                android:clickable="true"
                android:onClick="onClickNotificationPeriod" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>