<?xml version="1.0" encoding="utf-8"?><android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:paddingBottom="10dp"    android:paddingEnd="10dp"    android:paddingLeft="10dp"    android:paddingRight="10dp"    android:paddingStart="10dp"    android:fitsSystemWindows="true">    <LinearLayout        android:id="@+id/linearLayoutPlan"        android:orientation="vertical"        android:layout_width="match_parent"        android:layout_height="match_parent">        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:text="@string/income_expenses_hint"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:id="@+id/textViewHint"                android:layout_weight="1"                android:textStyle="bold|italic" />        </LinearLayout>        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:text="@string/plan_income_salary_wage"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:id="@+id/textViewSalary"                android:layout_weight="1" />            <EditText                android:layout_height="wrap_content"                android:id="@+id/editTextSalary"                android:inputType="number|numberDecimal"                android:layout_width="0dp"                android:layout_weight="1"                android:hint="@string/income_expenses_plan_hint"                android:background="@drawable/mybp_bordered_edittext"/>        </LinearLayout>        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:text="@string/plan_income_dividends"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:id="@+id/textViewDividends"                android:layout_weight="1" />            <EditText                android:layout_height="wrap_content"                android:id="@+id/editTextDividends"                android:inputType="number|numberDecimal"                android:layout_width="0dp"                android:layout_weight="1"                android:hint="@string/income_expenses_plan_hint"                android:background="@drawable/mybp_bordered_edittext"/>        </LinearLayout>        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:text="@string/plan_income_interests"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:id="@+id/textViewInterests"                android:layout_weight="1" />            <EditText                android:layout_height="wrap_content"                android:id="@+id/editTextInterests"                android:inputType="number|numberDecimal"                android:layout_width="0dp"                android:layout_weight="1"                android:hint="@string/income_expenses_plan_hint"                android:background="@drawable/mybp_bordered_edittext"/>        </LinearLayout>        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:text="@string/plan_income_profit"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:id="@+id/textViewProfit"                android:layout_weight="1" />            <EditText                android:layout_height="wrap_content"                android:id="@+id/editTextProfit"                android:inputType="number|numberDecimal"                android:layout_width="0dp"                android:layout_weight="1"                android:hint="@string/income_expenses_plan_hint"                android:background="@drawable/mybp_bordered_edittext"/>        </LinearLayout>        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:text="@string/plan_income_rents"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:id="@+id/textViewRents"                android:layout_weight="1" />            <EditText                android:layout_height="wrap_content"                android:id="@+id/editTextRents"                android:inputType="number|numberDecimal"                android:layout_width="0dp"                android:layout_weight="1"                android:hint="@string/income_expenses_plan_hint"                android:background="@drawable/mybp_bordered_edittext"/>        </LinearLayout>        <View style="@style/HorizontalDivider"            android:layout_marginTop="20dp"/>        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent" >            <Button                android:id="@+id/buttonAdd"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/income_expenses_add" />        </LinearLayout>        <View style="@style/HorizontalDivider"            android:layout_marginTop="20dp"/>        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:text="Earlier today"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:id="@+id/textViewHint1"                android:layout_weight="1"                android:textStyle="bold|italic" />        </LinearLayout>    </LinearLayout></android.support.v4.widget.NestedScrollView>